--- a/index.html
+++ b/index.html
@@ -3,11 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My-Zone.com</title>
+    <title>Purchase-Zone.com</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/browse/ionicons@4.5.10-0/dist/css/ionicons.min.csshttps://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css">
 </head>
 <body>
-    
+    <header>
+        <div class="logo"><a href="#">Purchase-Zone</a></div>
+        <div class="menu">
+            <a href="#"><ion-icon name="close" class="close"></ion-icon></a>
+        </div>
+        <div class="search">
+            <a href="#"><input type="text" placeholder="search brand,products.." id="input">
+                <ion-icon class="s" name="search"></ion-icon>
+            </a>
+        </div>
+        <ul class="heading">
+            <li><a href="#" class="under">Home</a></li>
+            <li><a href="#" class="under">Shop</a></li>
+            <li><a href="#" class="under">Products</a></li>
+            <li><a href="#" class="under">Contact</a></li>
+            <li><a href="#" class="under">About</a></li>
+        </ul>
+        <button class="btn">Create accout</button>
+        <div class="heading1">
+            <ion-icon name="menu" class="ham"></ion-icon>
+        </div>
+
+    </header>
+    <section>
+        <div class="section">
+            <div class="section1">
+                <div class="img-slider">
+                    <img src="https://images.pexels.com/photos/6347888/pexels-photo-6347888.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="" class="img">
+                    <img src="https://images.pexels.com/photos/3962294/pexels-photo-3962294.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="" class="img">
+                    <img src="https://images.pexels.com/photos/2292953/pexels-photo-2292953.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="" class="img">
+                    <img src="https://images.pexels.com/photos/1229861/pexels-photo-1229861.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="" class="img">
+                    <img src="https://images.pexels.com/photos/1598505/pexels-photo-1598505.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="" class="img">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
