files and links added

--- a/index.html
+++ b/index.html
@@ -226,5 +226,7 @@
         </div>
         <div class="footer3">Copyright@<h4>Puechase_Zone</h4>2021-2023</div>
     </footer>
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
