--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="#" class="under">Contact</a></li>
             <li><a href="#" class="under">About</a></li>
         </ul>
-        <button class="btn">Create accout</button>
+       <a href="pages/signup.html"><button class="btn">Create accout</button></a>
         <div class="heading1">
             <ion-icon name="menu" class="ham"></ion-icon>
         </div>
