files added,css style applied

--- a/Project-2/index.html
+++ b/Project-2/index.html
@@ -9,7 +9,7 @@
 <body>
     <header id="header">
        <div id="header-wrapper">
-        <a href="#home"><img src="https://200degs.com/design/200degrees-logo.png" alt="200 Degrees Logo" /></a>
+        <a href="#home"><img src="./200degs-logo.webp" alt="200 Degrees Logo" /></a>
 
         <a id="burger"></a>
        </div>
@@ -51,8 +51,8 @@
             <h2>Join Our Mailing List</h2>
             <p>Be the first to know of our great giveaways, events and bean sales</p>
             <form action="">
-                <input type="email" placeholder="Email address"><br>
-                <input type="submit" type="submit" value="Sunscribe">
+                <input type="email" id="email"placeholder="Email address"><br>
+                <input type="submit" id="submit" type="submit" value="Subscribe">
             </form>
         </div>
     </section>
