--- a/Project-3/e-commerce/index.html
+++ b/Project-3/e-commerce/index.html
@@ -7,8 +7,102 @@
     <title>FootZone-find your footware</title>
     <link rel="stylesheet" href="./favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet">
+    <link rel="preload" href="/hero-banner.png" as="image">  
   </head>
-  <body>
+  <body id="top">
+    <!-- Header -->
+     <header class="header" data-header>
+      <div class="container">
+        <div class="overlay"></div>
+        <a href="#" class="logo">
+          <img src="/logo.svg" alt="logo" width="160" height="50">
+        </a>
+        <button class="nav-open-btn" data-nav-open-btn aria-label="Open Menu">
+          <ion-icon name="menu-outline"></ion-icon>
+        </button>
+
+        <nav class="navbar" data-navbar>
+          <button class="nav-close-btn" data-nav-close-btn aria-label="Close Menu">
+            <ion-icon name="close-outline"></ion-icon>
+          </button>
+          <a href="#" class="logo">
+            <img src="/logo.svg" alt="logo" width="190" height="50">
+          </a>
+          <ul class="navbar-list">
+
+            <li class="navbar-item">
+              <a href="#" class="navbar-link">Home</a>
+            </li>
+  
+            <li class="navbar-item">
+              <a href="#" class="navbar-link">About</a>
+            </li>
+  
+            <li class="navbar-item">
+              <a href="#" class="navbar-link">Products</a>
+            </li>
+  
+            <li class="navbar-item">
+              <a href="#" class="navbar-link">Shop</a>
+            </li>
+  
+            <li class="navbar-item">
+              <a href="#" class="navbar-link">Blog</a>
+            </li>
+  
+            <li class="navbar-item">
+              <a href="#" class="navbar-link">Contact</a>
+            </li>
+  
+          </ul>
+  
+          <ul class="nav-action-list">
+  
+            <li>
+              <button class="nav-action-btn">
+                <ion-icon name="search-outline" aria-hidden="true"></ion-icon>
+  
+                <span class="nav-action-text">Search</span>
+              </button>
+            </li>
+  
+            <li>
+              <a href="#" class="nav-action-btn">
+                <ion-icon name="person-outline" aria-hidden="true"></ion-icon>
+  
+                <span class="nav-action-text">Login / Register</span>
+              </a>
+            </li>
+  
+            <li>
+              <button class="nav-action-btn">
+                <ion-icon name="heart-outline" aria-hidden="true"></ion-icon>
+  
+                <span class="nav-action-text">Wishlist</span>
+  
+                <data class="nav-action-badge" value="5" aria-hidden="true">5</data>
+              </button>
+            </li>
+  
+            <li>
+              <button class="nav-action-btn">
+                <ion-icon name="bag-outline" aria-hidden="true"></ion-icon>
+  
+                <data class="nav-action-text" value="318.00">Basket: <strong>$318.00</strong></data>
+  
+                <data class="nav-action-badge" value="4" aria-hidden="true">4</data>
+              </button>
+            </li>
+  
+          </ul>
+        </nav>
+      </div>
+     </header>
     
     <script type="module" src="/main.js"></script>
   </body>
