--- a/Project-3/e-commerce/index.html
+++ b/Project-3/e-commerce/index.html
@@ -209,7 +209,7 @@
                 <div class="product-card" tabindex="0">
   
                   <figure class="card-banner">
-                    <img src="./assets/images/product-1.jpg" width="312" height="350" loading="lazy"
+                    <img src="./public/product-1.jpg" width="312" height="350" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
   
                     <div class="card-badge">New</div>
@@ -273,7 +273,7 @@
                 <div class="product-card" tabindex="0">
   
                   <figure class="card-banner">
-                    <img src="./assets/images/product-2.jpg" width="312" height="350" loading="lazy"
+                    <img src="./public/product-2.jpg" width="312" height="350" loading="lazy"
                       alt="Leather Mens Slipper" class="image-contain">
   
                     <ul class="card-action-list">
@@ -335,7 +335,7 @@
                 <div class="product-card" tabindex="0">
   
                   <figure class="card-banner">
-                    <img src="./assets/images/product-3.jpg" width="312" height="350" loading="lazy"
+                    <img src="./public/product-3.jpg" width="312" height="350" loading="lazy"
                       alt="Simple Fabric Shoe" class="image-contain">
   
                     <div class="card-badge">New</div>
@@ -399,7 +399,7 @@
                 <div class="product-card" tabindex="0">
   
                   <figure class="card-banner">
-                    <img src="./assets/images/product-4.jpg" width="312" height="350" loading="lazy"
+                    <img src="./public/product-4.jpg" width="312" height="350" loading="lazy"
                       alt="Air Jordan 7 Retro " class="image-contain">
   
                     <div class="card-badge"> -25%</div>
@@ -463,7 +463,7 @@
                 <div class="product-card" tabindex="0">
   
                   <figure class="card-banner">
-                    <img src="./assets/images/product-5.jpg" width="312" height="350" loading="lazy"
+                    <img src="./public/product-5.jpg" width="312" height="350" loading="lazy"
                       alt="Nike Air Max 270 SE" class="image-contain">
   
                     <div class="card-badge">New</div>
@@ -527,7 +527,7 @@
                 <div class="product-card" tabindex="0">
   
                   <figure class="card-banner">
-                    <img src="./assets/images/product-6.jpg" width="312" height="350" loading="lazy"
+                    <img src="./public/product-6.jpg" width="312" height="350" loading="lazy"
                       alt="Adidas Sneakers Shoes" class="image-contain">
   
                     <ul class="card-action-list">
@@ -589,7 +589,7 @@
                 <div class="product-card" tabindex="0">
   
                   <figure class="card-banner">
-                    <img src="./assets/images/product-7.jpg" width="312" height="350" loading="lazy"
+                    <img src="./public/product-7.jpg" width="312" height="350" loading="lazy"
                       alt="Nike Basketball shoes" class="image-contain">
   
                     <ul class="card-action-list">
